# sober-ferris

./: Cargo.toml  README.md  diesel.toml
migrations/2022-09-01-121300_setup_postgis/: down.sql  up.sql
migrations/2022-09-02-115259_create_partner_table/: down.sql  up.sql
migrations/2022-09-06-174533_add_address_column/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/entities/partner/: mod.rs  model.rs  routes.rs
src/routes/: partner.rs
src/types/: mod.rs
