[package]
name = "sober-ferris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
postgis = "0.9.0"
postgis_diesel = "0.4.0"
